added SHA256 signatures

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 				<h5>Onvox Root Certificate Authority G3</h5>
 				<div class="row col-md-12">
 					<a href="OnvoxRootCertificateAuthorityG3.crt">PEM Format</a>
+					<p class="small"></h6>SHA256: 7847a026b7010e061cc529f34dbf5987bcaecba885917dfc91794eb66971bc1a</p>
 				</div>
 				<div class="row col-md-12">
 					<a href="OnvoxRootCertificateAuthorityG3.cer">DER Format</a>
+					<p class="small"></h6>SHA256: eaaebbaa6fa40f39454f9b80b67b2b778ed690acce9cf40a57ae298b1b9eca07</p>
 				</div>
 			</div>
 		
@@ -47,6 +49,7 @@
 				<h5>Certificate Revocation List</h5>
 				<div class="row col-md-12">
 					<a href="OnvoxCertificateAuthorityG3.crl">Download</a>
+					<p class="small"></h6>SHA256: 1140a0a36c92182d10cc6263337ed134894b9d87c1bb59078a69fd77aafff558</p>
 				</div>
 			</div>
 		</div>
@@ -58,9 +61,11 @@
 				<h5>Onvox Issuing CA1 G3</h5>
 				<div class="row col-md-12">
 					<a href="OnvoxIssuingCA1G3.crt">PEM Format</a>
+					<p class="small"></h6>SHA256: ec67ce777a1ac7a8f8a8ecde37902c4d9e93db2196099692aa195e97ba3ed890</p>
 				</div>
 				<div class="row col-md-12">
 					<a href="OnvoxIssuingCA1G3.cer">DER Format</a>
+					<p class="small"></h6>SHA256: ac7452edb5dd8d55b5bbd2f502f92e6b2058d6d4d1959d46ac7fafde631b1789</p>
 				</div>
 			</div>
 		
@@ -82,9 +87,7 @@
 		    <h5>Onvox Root Certificate Authority G2</h5>
 		    <div class="row col-md-12">
 		      <a href="OnvoxRootCertificateAuthorityG2.crt">PEM Format</a>
-		    </div>
-		    <div class="row col-md-12">
-		      <a href="OnvoxRootCertificateAuthorityG2.cer">DER Format</a>
+					<p class="small"></h6>SHA256: ebb95bcb2051cd1b0a1b589cbc4d5801c161ab5c0a62f12db57a7af3f8674976</p>
 		    </div>
 		  </div>
 		
@@ -94,6 +97,7 @@
 		    <h5>Certificate Revocation List</h5>
 		    <div class="row col-md-12">
 		      <a href="OnvoxRootCertificateAuthorityG2.crl">Download</a>
+					<p class="small"></h6>SHA256: 7a69789b974ee97f9558431c934f12ff9af31636350f67acde6041184de70b2b</p>
 		    </div>
 		  </div>
         </div>
@@ -103,12 +107,15 @@
 		    <h5>Onvox Issuing CA2 G2</h5>
 		    <div class="row col-md-12">
 		      <a href="OnvoxIssuingCA2G2.crt">PEM Format</a>
+					<p class="small"></h6>SHA256: 9d79546a6b60bb848264b9e30ce3f5bcf160cb43d7c7b1d5161ab146c4a158c3</p>
 		    </div>
 		    <div class="row col-md-12">
 		      <a href="OnvoxIssuingCA2G2.cer">DER Format</a>
+					<p class="small"></h6>SHA256: 7cb2300589d1307f4647b32f89c60a220a7d79d6f58117eb20a72f6a9e25901d</p>
 		    </div>
 		    <div class="row col-md-12">
 		      <a href="OnvoxIssuingCA2G2.pem">Chain PEM Format</a>
+					<p class="small"></h6>SHA256: 13c830d01b1d232d061c415c2c4bfe79106cd71fc924d85a513025ebdd76cadd</p>
 		    </div>
 		  </div>
 		
@@ -118,6 +125,7 @@
 		    <h5>Certificate Revocation List</h5>
 		    <div class="row col-md-12">
 		      <a href="OnvoxIssuingCA2G2.crl">Download</a>
+					<p class="small"></h6>SHA256: e79952451d599921d46ed5d9ba353c972e3ff2eb9fcf6269d22eb03d51da34f7</p>
 		    </div>
 		  </div>
         </div>
